--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@expo/react-native-action-sheet": "^4.0.1",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-community/slider": "4.4.2",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-native-menu/menu": "^0.9.1",
     "@react-native-picker/picker": "2.6.1",
     "@react-native-segmented-control/segmented-control": "2.4.1",
@@ -24,9 +26,13 @@
     "@react-navigation/native": "^6.1.7",
     "@roninoss/icons": "^0.0.4",
     "@shopify/flash-list": "1.6.3",
+    "@supabase/supabase-js": "^2.42.7",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "expo": "^50.0.17",
+    "expo-barcode-scanner": "~12.9.3",
+    "expo-camera": "~14.1.3",
     "expo-constants": "~15.4.5",
     "expo-dev-client": "~3.3.8",
     "expo-linking": "~6.2.2",
@@ -48,21 +54,22 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-uitextview": "^1.1.4",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "tailwind-merge": "^2.2.1",
     "zeego": "^1.9.1"
   },
   "devDependencies": {
-    "ajv": "^8.12.0",
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
+    "ajv": "^8.12.0",
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.4.5"
   },
   "eslintConfig": {
